<package format="3">
  <name>cocoro_evaluation</name>
  <version>0.0.0</version>
  <description>Performance evaluation package</description>

  <maintainer email="you@example.com">you</maintainer>
  <license>Apache-2.0</license>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <!-- Build -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <!-- Runtime -->
  <exec_depend>rosidl_default_runtime</exec_depend>
  <depend>std_msgs</depend>

  <!-- REQUIRED when defining messages -->
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
